--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,7 @@
-spring.application.name=pricecompareredis
+spring:
+  application:
+    name: pricecompareredis
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
